# flappy-bird

./: .gitignore  CMakeLists.txt  README.md  compile.cmd  main.cpp
include/: bird.hpp  game.hpp  pipe.hpp  sound.hpp  texture.hpp
src/: bird.cpp  game.cpp  pipe.cpp  sound.cpp  texture.cpp
